# public

./: pyproject.toml  requirements.txt
credit scoring/: pipeline.ipynb  production_xgboost_model.pkl  train_best_model.py  train_full_model.py
