[project]
name = "sem10_calibration"
version = "0.1.0"
requires-python= "==3.13.5"
dependencies = [
    "betacal>=1.1.0",
    "imbalanced-learn>=0.14.0",
    "ipython>=9.7.0",
    "joblib>=1.5.2",
    "matplotlib>=3.10.7",
    "ml-insights>=1.1.0",
    "numpy>=2.3.5",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "torchmetrics>=1.8.2",
    "xgboost>=3.1.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "notebook>=7.4.5",
    "pip>=25.2",
]
